...
        app:layout_constraintTop_toBottomOf="@+id/address"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Contact"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/province"
        android:layout_marginRight="8dp"
...
